[package]
name = "SeqSizzle"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bio = "1"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
gcollections = "1.5.0"
intervallum = "1.4.0"
num-traits = "0.2.17"
ratatui = "0.25.0"
rayon = "1.8.0"
tui-textarea = "0.3.1"
shadow-rs = "0.26.1"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
shadow-rs = "0.26.1"
