[package]
name = "seqsizzle" #https://github.com/rust-lang/cargo/issues/9778
version = "0.4.0"
authors = ["Changqing Wang <wang.ch@wehi.edu.au>"]
description = "A pager for viewing FASTQ and FASTA files with fuzzy matching, allowing different adaptors to be colored differently."
readme = "README.md"
repository = "https://github.com/ChangqingW/SeqSizzle"
license = "AGPL-3.0-or-later"
categories = ["command-line-utilities", "visualization", "science"]
keywords = ["fastq", "pager", "genomic-sequencing", "bioinformatics", "visualization"]
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">= 1.0.75"
bio = ">= 3.0.0"
clap = { version = ">= 4.5.54", features = ["derive"] }
crossterm = "0.28"
flate2 = ">= 1.1.8"
gcollections = ">= 1.5.0"
intervallum = ">= 1.4.0"
num-traits = ">= 0.2.19"
ratatui = "0.29.0" # tui-textarea 0.7.0 depends on ratatui 0.29
rayon = ">= 1.11.0"
tui-textarea = ">= 0.7.0"
shadow-rs = ">= 1.5.0"
csv = ">= 1.4.0"
rand = "0.8"

[dependencies.uuid]
version = ">= 1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
shadow-rs = ">= 0.26.1"

[profile.release]
strip = true
